# qa-two-playwright-pytest-allure

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  user_manager.sh
allure-results/: 1109c2e1-df9e-410c-b826-1d5a5611fabd-container.json  2536f4d0-967e-4aa9-9a90-e9cae2963aa0-container.json  2deb99bc-ba8e-4c89-ad22-6f2eacf63e78-container.json  3645ce93-7194-4454-b897-afa0d4baa42b-container.json  393e8191-f043-423a-a6d0-647415412403-container.json  46b01222-e0cc-4348-bdcb-3d688a67a2ef-result.json  52cbd062-6f9e-4306-a820-5aa90e5a859e-container.json  52e62ff4-a569-4dc5-9a63-35354633cf81-container.json  6ce3eaec-7ea2-4d14-8a53-4e797666c3b7-attachment.txt  757bea89-8678-4224-bc7d-f59ba9de9d73-container.json  823b7a61-8f5a-4a5b-967f-003580a406fc-result.json  980c0b2b-ce97-4c83-acff-4ef79fc13699-container.json  9b77dea6-bfd9-4df4-ad18-6c064d12c82a-container.json  a78d7220-dad2-43e6-a954-dd8385eb3bb1-container.json  b5480b18-66d5-4261-b9c9-37ce6bbc9641-container.json  bcdf5033-4955-440e-85ed-a4d6715051e0-container.json  bd996ff9-2807-46e6-bb85-4e1f1f70e43c-container.json  be2b8926-cb31-428f-8567-6c0eb9785357-container.json  cf97b5e5-f7d0-4c23-8c5a-fc63c57c6577-container.json  d38c4db5-a0b7-44c5-84d6-da3181f87ab2-container.json  d4c6f02e-42ff-40d6-813b-7e4951e7b9aa-container.json  d87edfe4-7e4a-4567-b98b-c8d0b0721584-container.json  f27d2aac-d169-45a9-b8cf-42761cc53b24-container.json  f8ffa17a-2b85-4a0f-88a3-fa5b3a305bc2-container.json  fa3ebffa-5f0b-4842-a067-8e01663a18ba-container.json
config/: __init__.py  exception.py  expectations.py  generate_person.py  path_manager.py  playwright.py  settings.py  toolshop_urls.py
data/: person_data.json
docs/: index.html
fixtures/: auth_user.py  generated_users.py  logger.py  open_page.py  page.py  toolshop_pages.py
page_factory/: banner.py  button.py  component.py  input.py  link.py  paragraph.py  select.py  title.py
pages/: account_page_toolshop.py  base_page.py  checkout_page_toolshop.py  login_page_toolshop.py  main_page_toolshop.py  product_page_toolshop.py  registration_page_toolshop.py
(+33 files in other folders)
